--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 
 <script>
 var HOST = location.origin.replace(/^http/, 'ws')
+console.log(HOST);
 var ws = new WebSocket(HOST);
 var el = document.getElementById('server-time');
 
 ws.onmessage = function (event) {
   document.getElementById('el').innerHTML = 'Server time: ' + event.data;
+  ws.send(event.data);
 };
 </script>
