--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script>
 var HOST = location.origin.replace(/^http/, 'ws')
 console.log("wss://plexicraft-server.herokuapp.com");
-var ws = new WebSocket(HOST);
+var ws = new WebSocket("wss://plexicraft-server.herokuapp.com");
 var el = document.getElementById('server-time');
 
 ws.onopen = function(){
